refactor: убрать проблему N+1 при обращение к бд, реализовать логику через один метод